--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -53,12 +53,19 @@ h3 {
     display: none;
     width: 100%;
     height: 100%;
-    top: 5.8em;
+    top: 0;
     right: 0;
     left: 0;
     bottom: 0;
-    z-index: 4;
-    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 3;
+    background: linear-gradient(rgba(0,0,0,0.1),
+                rgba(0,0,0,0.5));
+    transform: translate(120%);            
+    transition: 0.5s ease;
+}
+.overlay.show {
+    display: block;
+    transform: translate(0);
 }
 
 ul {
@@ -112,6 +119,9 @@ nav {
 .logo {
     width: 13em;
 }
+.logo-nav {
+    z-index: 4;
+}
 
 .hamburger,
 .nav-close {
@@ -125,6 +135,7 @@ nav {
     outline: none;
     display: none;
     padding: 0;
+    z-index: 4;
 }
 
 .nav-close.show {
@@ -421,7 +432,7 @@ footer {
 
 @media (max-width: 767px) {
     .nav-links {
-        position: fixed;
+        position: absolute;
         flex-direction: column;
         top: 4.4em;
         background-color: var(--black);
